# Coplt.Com2

./: .gitignore  CMakeLists.txt  Cargo.toml  Coplt.Com2.slnx  Directory.Build.props  Directory.Packages.props  README.md  global.json
Coplt.Com/: Attrs.cs  B1.cs  ComUtils.cs  Coplt.Com.csproj  Core.cs  HResult.cs  Interface.cs  NonNull.cs  Opaque.cs  Ptr.cs  Rc.cs  RoSpan.cs  Span.cs  Str.cs  packages.lock.json
Coplt.Com2/: ComDefineJsonContext.cs  Config.cs  Coplt.Com2.csproj  CppOutput.cs  DefineExtractor.cs  GenAction.cs  NewConfigAction.cs  Program.cs  RustOutput.cs  TypeSymbol.cs  Utils.cs  packages.lock.json
Coplt.Com2.Analyzer/: ComUnmanagedType.cs  Coplt.Com2.Analyzer.csproj  packages.lock.json
Coplt.Com2.Analyzer/Generators/: InterfaceGenerator.cs
Coplt.Com2.Analyzer/Generators/Templates/: TemplateComInterface.cs
Coplt.Com2.Analyzer/Properties/: launchSettings.json
Coplt.Com2.Analyzer/Resources/: Resources.cs  Strings.resx  Strings.zh-Hans.resx
Coplt.Com2.DefineModel/: ADeclare.cs  ComDefine.cs  Coplt.Com2.DefineModel.csproj  EnumDeclare.cs  InterfaceDeclare.cs  JsonStringEnumConverter.cs  StructDeclare.cs  TypeDeclare.cs  packages.lock.json
Tests/Test1/: CMakeLists.txt  co_com.json  define.json
Tests/Test1/Test1/: Test1.cs  Test1.csproj  packages.lock.json
Tests/Test1/headers/: Details.h  Interface.h  Types.h
Tests/Test1/src/: main.cc
cocom/: CMakeLists.txt
cocom/cmake/: Config.cmake.in
cocom/includes/: CoCom.Concepts.h  CoCom.Guid.h  CoCom.Interface.h  CoCom.Macros.h  CoCom.NullPointerError.h  CoCom.Object.h  CoCom.Rc.h  CoCom.Types.h  CoCom.h
cocom/src/: cc.cc
cocom_rs/: Cargo.toml
cocom_rs/src/: com_ptr.rs  guid.rs  hresult.rs  lib.rs  object.rs
cocom_rs_proc/: Cargo.toml
cocom_rs_proc/src/: lib.rs
